webgui/gvc3200/css/pageframe.css
/* ... */
.blockMsg.blockPage img{position: relative;float: left;top: 0px;left:50%;margin-left: -20px;}

/*------------Caption-----------------*/
#captionContainer{width:719px;height:405px;border-radius:0px;border:1px solid #444444;box-shadow:0px 0px 10px 2px #919191;background:#232728;position:absolute;display:none;z-index:1000;top:50%;left:50%;margin-left:-370px;margin-top:-180px;}
#topCaption, #leftCaption, #bottomCaption{background:#ccc;text-align:center;}
#topCaption{width:100%;min-height:20px;}
#leftCaption{width:153px;margin:3px 0 3px 0;}
#bottomCaption{width:100%;min-height:20px;}
#fnblockContainer{height:auto;position:absolute;border:1px solid #c2c2c2;background:#ccc;display:none;}
#fnblockContainer *{float:left;}
#closecaption{position: absolute;right:-15px;top:-15px;border:0;background:url("../img/remote/close_unpressed.png") no-repeat;width:42px;height:42px;}
#closecaption:hover{background:url("../img/remote/close_pressed.png") no-repeat;}
#fnblockContainer button:hover{text-align:center;border-radius:0px;}
#capBold{width:18px;height:20px;background:transparent;color:#424242;text-align:center;font-size:15px;}
#capBold:hover{background:#989FAC;}
#capleftalign, #capcenteralign, #caprightalign{width:22px;height:20px;}
#capleftalign{background:url("../img/call/align_left.png") center center  no-repeat;}
#capcenteralign{background:url("../img/call/align_middle.png") center center no-repeat;}
#caprightalign{background:url("../img/call/align-right.png") center center no-repeat;}
#capleftalign:hover{background:url("../img/call/align_left.png") #989FAC center center no-repeat;}
#capcenteralign:hover{background:url("../img/call/align_middle.png") #989FAC center center no-repeat;}
#caprightalign:hover{background:url("../img/call/align-right.png") #989FAC center center no-repeat;}
#ftcolordiv, #bgcolordiv{width:28px;height:20px;color:#424242;background:url("../img/call/caption_triangle.png") 20px center no-repeat;}
#ftcolordiv:hover, #bgcolordiv:hover{background:url("../img/call/caption_triangle.png") #989FAC 20px center no-repeat;cursor:pointer;}
#ftcolordiv span{position:relative;left:-9.5px;float:none;font-size:15px;}
#capfontcolor{width:13px;height:2px;padding:0px;position:relative;top:8px;left:3px;}
#capbgcolor{width:12px;height:12px;border:1px solid #8E899C;padding:0;position:relative;left:3px;top:-3px;}
#fnblockContainer > *{margin:2px;}
#fnblockContainer button{border:0;border-radius: 0px;}
#captionContainer input[type="text"]{width:100%;height:100%;text-align:center;background:transparent;border:0;}

/*********** password visible or not style ************/
.hideShowPassword-wrapper{margin-top: 3px !important;}
.hideShowPassword-wrapper input{padding-right: 0 !important;}
.hideShowPassword-toggle{width: 20px; height: 18px; z-index: 5; margin: 0 !important; cursor: pointer; text-indent: -9999em; top: 16% !important; right: 4px !important;}
.hideShowPassword-toggle-show{background: url(../img/pwd_visible.png) -110px -30px no-repeat;}
.hideShowPassword-toggle-show:hover{background: url(../img/pwd_visible.png) -152px -30px no-repeat;}
.hideShowPassword-toggle-hide{background: url(../img/pwd_visible.png) -23px -28px no-repeat;}
.hideShowPassword-toggle-hide:hover{background: url(../img/pwd_visible.png) -67px -28px no-repeat;}

